MCA App/Release/MCA Demo org/src/objects/Merchant_Payment__c.object
<CustomObject>
    <description>To collect from merchants (For Direct Funders)</description>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Merchant Payments</relationshipLabel>
        <relationshipName>Merchant_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Holdback_Amount__c</fullName>
        <label>Holdback $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Merchant Payments</relationshipLabel>
        <relationshipName>Merchant_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <label>% Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payment_Amt__c</fullName>
        <label>Payment Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pmt_Type__c</fullName>
        <label>Pmt Type</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <label>Processed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Merchant Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MPMT-{0000}</displayFormat>
        <label>Merchant Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>